# craite

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  lerna.json  package-lock.json  package.json  tsconfig.base.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
docker/: Dockerfile.node  Dockerfile.python  Dockerfile.rust  docker-compose.yml
docs/: api-reference.md  examples.md  getting-started.md  mcp-tools.md
scripts/: build-all.sh  publish-all.sh
sdks/go/: README.md  client.go  craite.go  go.mod  mcp.go
sdks/go/cmd/craite/: main.go
sdks/go/examples/: ethereum_dapp.go
sdks/go/tests/: client_test.go
sdks/python/: README.md  requirements.txt  setup.py
sdks/python/craite/: __init__.py  cli.py  client.py  mcp_tools.py  utils.py
sdks/python/examples/: trading_bot.py
sdks/python/tests/: test_client.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: smart_contract_builder.rs
sdks/rust/src/: client.rs  lib.rs  mcp.rs
sdks/rust/tests/: integration_test.rs
